examples/good/fact.gr
fact : Int |∞| -> Int
fact x =
  case x of
    |0| -> 1;
    |m| -> m * fact |(m - 1)|

main : Int
main = fact |7|
