examples/illtyped/exactNat.gr
dub : Int |2=| -> Int
dub |x| = x
